# fpdec

./: .gitignore  AUTHORS.rst  CHANGES.txt  CMakeLists.txt  CONTRIBUTING.rst  LICENSE  README.md
src/: CMakeLists.txt
src/libfpdec/: basemath.c  basemath.h  common.h  common_.h  compiler_macros.h  convert.c  convert.h  digit_array.c  digit_array.h  digit_array_.h  digit_array_struct.h  format_spec.c  format_spec.h  fpdec.c  fpdec.cpp  fpdec.h  fpdec.hpp  fpdec_struct.h  fpdecimal.cpp  fpdecimal.hpp  helper_macros.h  mem.h  parser.c  parser.h  rounding.c  rounding.h  rounding_.h  rounding_helper.h  shifted_int.c  shifted_int.h  shifted_int_.h  uint128_math.h  uint128_math_native.h  uint128_type.h  uint128_type_native.h  uint64_math.h  uint96.c  uint96.h  unicode_digits.h
test/: CMakeLists.txt  add_sub_test.cpp  adjustments_test.cpp  checks.hpp  compare_test.cpp  converter_test.cpp  decimal_test.cpp  div_test.cpp  divmod_test.cpp  formatting_test.cpp  fpdec_test.cpp  initializer_test.cpp  internal_rounding_test.cpp  mul_test.cpp  properties_test.cpp  quantize_test.cpp
