# Michael Amrhein. Copyright (C) 2020.

file(GLOB_RECURSE PROJECT_C_SRCS *.c *.h)
file(GLOB_RECURSE PROJECT_CXX_SRCS *.cpp *.hpp)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0")
set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -O3")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")

# C lib
set(LIB_NAME "${PROJECT_NAME}")
add_library(${LIB_NAME} SHARED ${PROJECT_C_SRCS})
#target_link_libraries(${LIBRARY_NAME} ${PROJECT_LIBS})
set_target_properties(${LIB_NAME} PROPERTIES
        VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}"
        OUTPUT_NAME ${LIB_NAME} CLEAN_DIRECT_OUTPUT 1)
install(TARGETS ${LIB_NAME} DESTINATION lib)

# C++ lib
set(LIB_NAME "${PROJECT_NAME}++")
add_library(${LIB_NAME} SHARED ${PROJECT_CXX_SRCS})
target_link_libraries(${LIB_NAME} ${PROJECT_NAME})
set_target_properties(${LIB_NAME} PROPERTIES
        VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}"
        OUTPUT_NAME ${LIB_NAME} CLEAN_DIRECT_OUTPUT 1)
install(TARGETS ${LIB_NAME} DESTINATION lib)
